# stack-temporal-main

./: MANIFEST.in  MODEL_ACCEPTABLE_USE_POLICY.md  MODEL_LICENSE.md  README.md  pyproject.toml  setup.cfg
configs/finetuning/: ft_parsecg.yaml
configs/training/: bc_large.yaml
notebooks/: tutorial-embed.ipynb  tutorial-predict.ipynb
src/stack/: cli_utils.py  dataloader.py  finetuning_dataloader.py  model.py  model_finetune.py  model_loading.py
src/stack/cli/: __init__.py  embedding.py  generation.py  launch_finetuning.py  launch_training.py
src/stack/data/: __init__.py  datasets.py  gene_processing.py  h5_manager.py  hvg.py
src/stack/data/finetuning/: __init__.py  datasets.py
src/stack/data/training/: __init__.py  datasets.py
src/stack/finetune/: __init__.py  datamodule.py  datasets.py  lightning.py  utils.py
src/stack/models/: __init__.py  utils.py
src/stack/models/core/: __init__.py  base.py  inference.py  losses.py
src/stack/models/finetune/: __init__.py  mixins.py  model.py
src/stack/modules/: __init__.py  attention.py  regularizers.py
src/stack/training/: __init__.py  datamodule.py  lightning.py  utils.py
tests/: test_cli_help.py  test_cli_smoke_runs.py  test_cli_utils.py  test_finetune_mixins.py  test_model_core.py  test_model_loading_import.py
