[metadata]
name = arc-stack
version = 0.1.3
description = Training and fine-tuning utilities for the Stack model
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_files = LICENSE

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.9
include_package_data = True
install_requires =
    anndata>=0.9
    h5py>=3.8
    geomloss>=0.2.6
    numpy>=1.22
    pandas>=1.5
    psutil>=5.9
    pytorch-lightning>=2.1
    PyYAML>=6.0
    scipy>=1.8
    scvi-tools>=1.0
    torch>=2.0
    wandb>=0.15

[options.entry_points]
console_scripts =
    stack-train = stack.cli.launch_training:main
    stack-finetune = stack.cli.launch_finetuning:main
    stack-embedding = stack.cli.embedding:main
    stack-generation = stack.cli.generation:main

[options.packages.find]
where =
    src
include =
    stack*
